package br.labprog.fluxarte.model;

public class GeneroObra {
}
